# Lab05-TO

./: README.md
E-Propuesto01/: CMakeLists.txt  main.cpp
E-Propuesto02/: CMakeLists.txt  main.cpp
E-Propuesto03/: CMakeLists.txt  main.cpp
E-Propuesto04/: CMakeLists.txt  main.cpp
E-Propuesto05/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
E-Resuelto01/: CMakeLists.txt  main.cpp
E-Resuelto02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.ui
